--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,18 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "Paperlogy-8ExtraBold";
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/2408-3@1.0/Paperlogy-8ExtraBold.woff2")
-    format("woff2");
-  font-weight: 800;
+  font-family: "Paperlogy";
+  font-weight: 400;
   font-style: normal;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/Paperlogy/Paperlogy-4Regular.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/Paperlogy/Paperlogy-4Regular.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/Paperlogy/Paperlogy-4Regular.otf")
+      format("opentype"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/Paperlogy/Paperlogy-4Regular.ttf")
+      format("truetype");
 }
 
 * {
@@ -25,7 +32,7 @@ a {
   color: inherit;
 }
 body {
-  font-family: "Paperlogy-8ExtraBold";
+  font-family: "Paperlogy";
   background: url(../img/background.png);
 }
 /*con01*/
@@ -34,31 +41,42 @@ body {
   height: 100vh;
   position: relative;
 }
-.con01 .top {
+/* con01 top */
+#con01 .top {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 2rem 6rem;
   box-sizing: border-box;
 }
-.con01 .top .logo {
-}
-.con01 .top .line01 {
-  width: 1200px;
+/*con01 top line01  */
+#con01 .top .line01 {
+  width: 70%;
 
   border-bottom: 2px solid #222;
 }
-.con01 .top .bar {
+/* con01 top bar */
+#con01 .top .bar {
   font-size: 3rem;
 }
-.con01 .title {
+/*con01 title  */
+#con01 .title {
   width: 100%;
   font-family: "PyeongChangPeace-Bold";
-  font-size: 9rem;
-  text-align: center;
-}
 
-.con01 .textBox {
+  text-align: center;
+
+  margin-top: 50px;
+}
+#con01 .title h2 {
+  font-size: 12vw;
+}
+#con01 .title h2 span {
+  display: block;
+  font-size: 10.5vw;
+}
+/*con01 textBox  */
+#con01 .textBox {
   width: 1200px;
   display: flex;
   align-items: center;
@@ -69,29 +87,85 @@ body {
   padding: 0.5rem 3rem;
   margin: 0px auto;
 }
-.con01 .textBox p {
-  font-size: 1.5rem;
+#con01 .textBox p {
+  font-size: 2rem;
 }
-.con01 .textBox img {
+#con01 .textBox img {
   width: 50px;
 }
-.con01 .name {
+/*con01 name  */
+#con01 .name {
   position: absolute;
   left: 50%;
   top: 40%;
   transform: translateX(-50%) rotate(-10deg);
+  animation: ani 1s linear infinite;
 }
-.con01 .name img {
+@keyframes ani {
+  0% {
+    transform: translateX(-50%) rotate(-10deg) scale(0.5);
+  }
+  100% {
+    transform: translateX(-50%) rotate(-10deg) scale(1.5);
+  }
+}
+#con01 .name img {
   width: 300px;
 }
-.con01 .bottom {
+/*con01 web */
+#con01 .web {
+  position: absolute;
+  left: 8%;
+  top: 66%;
+  transform: rotate(-10deg);
+  animation: ani01 1s linear infinite;
+}
+@keyframes ani01 {
+  0% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(-10deg);
+  }
+}
+#con01 .web img {
+  width: 300px;
+}
+/*con01 work  */
+#con01 .work {
+  position: absolute;
+  right: 5%;
+  top: 12%;
+  transform: rotate(-10deg);
+  animation: ani02 1s linear infinite;
+}
+@keyframes ani02 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-10deg);
+  }
+}
+
+#con01 .work img {
+  width: 230px;
+}
+/*con01 bottom   */
+#con01 .bottom {
   width: 100%;
   display: flex;
-
-  justify-content: space-between;
+  /* gap: 20rem; */
+  justify-content: center;
+  align-items: center;
+  margin-top: 34px;
 }
-.con01 .bottom .line02 {
-  width: 1200px;
+#con01 .bottom .line02 {
+  width: 75%;
 
   border-bottom: 2px solid #222;
+}
+#con01 .bottom p {
+  margin-left: 3rem;
+  font-size: 2rem;
 }
