--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,13 @@ a {
 body {
   font-family: "Paperlogy";
   background: url(../img/background.png);
+  word-break: keep-all;
 }
 
 /*con01*/
 .con01 {
   width: 100%;
   height: 100vh;
-  position: relative;
 }
 /* con01 top */
 #con01 .top {
@@ -50,6 +50,10 @@ body {
   padding: 2rem 6rem;
   box-sizing: border-box;
 }
+/* con01 top logo */
+#con01 .top .logo h1 {
+  font-size: 1.8vw;
+}
 /*con01 top line01  */
 #con01 .top .line01 {
   width: 70%;
@@ -58,14 +62,14 @@ body {
 }
 /* con01 top bar */
 #con01 .top .bar {
-  font-size: 3rem;
+  font-size: 3vw;
 }
 /*con01 title  */
 #con01 .title {
   width: 100%;
   font-family: "PyeongChangPeace-Bold";
-
   text-align: center;
+  position: relative;
 }
 #con01 .title h2 {
   font-size: 12vw;
@@ -73,6 +77,86 @@ body {
 #con01 .title h2 span {
   display: block;
   font-size: 11.5vw;
+}
+/*con01 name  */
+#con01 .name {
+  position: absolute;
+  left: 50%;
+  top: 35%;
+  transform: translateX(-50%) rotate(-10deg);
+  animation: ani 1s linear infinite;
+}
+@keyframes ani {
+  0% {
+    transform: translateX(-50%) rotate(-10deg) scale(0.5);
+  }
+
+  100% {
+    transform: translateX(-50%) rotate(-10deg) scale(1.5);
+  }
+}
+#con01 .name img {
+  width: 80%;
+}
+/*con01 web */
+#con01 .web {
+  position: absolute;
+  left: 10%;
+  top: 73%;
+
+  animation: ani01 1s linear infinite;
+}
+@keyframes ani01 {
+  0% {
+    transform: rotate(10deg);
+  }
+  20% {
+    transform: rotate(10deg);
+  }
+  40% {
+    transform: rotate(-10deg);
+  }
+
+  70% {
+    transform: rotate(10deg);
+  }
+
+  100% {
+    transform: rotate(10deg);
+  }
+}
+#con01 .web img {
+  width: 150%;
+}
+/*con01 work  */
+#con01 .work {
+  position: absolute;
+  right: 8%;
+  top: -5%;
+  animation: ani02 1s linear infinite;
+}
+@keyframes ani02 {
+  0% {
+    transform: rotate(10deg);
+  }
+  20% {
+    transform: rotate(10deg);
+  }
+  40% {
+    transform: rotate(-10deg);
+  }
+
+  70% {
+    transform: rotate(10deg);
+  }
+
+  100% {
+    transform: rotate(10deg);
+  }
+}
+
+#con01 .work img {
+  width: 120%;
 }
 /*con01 textBox  */
 #con01 .textBox {
@@ -87,74 +171,17 @@ body {
   margin: 0px auto;
 }
 #con01 .textBox p {
-  font-size: 2rem;
+  font-size: 2vw;
 }
 #con01 .textBox img {
   width: 50px;
 }
-/*con01 name  */
-#con01 .name {
-  position: absolute;
-  left: 50%;
-  top: 35%;
-  transform: translateX(-50%) rotate(-10deg);
-  animation: ani 1s linear infinite;
-}
-@keyframes ani {
-  0% {
-    transform: translateX(-50%) rotate(-10deg) scale(0.5);
-  }
-  100% {
-    transform: translateX(-50%) rotate(-10deg) scale(1.5);
-  }
-}
-#con01 .name img {
-  width: 300px;
-}
-/*con01 web */
-#con01 .web {
-  position: absolute;
-  left: 8%;
-  top: 62%;
-  transform: rotate(-10deg);
-  animation: ani01 1s linear infinite;
-}
-@keyframes ani01 {
-  0% {
-    transform: rotate(10deg);
-  }
-  100% {
-    transform: rotate(-10deg);
-  }
-}
-#con01 .web img {
-  width: 300px;
-}
-/*con01 work  */
-#con01 .work {
-  position: absolute;
-  right: 5%;
-  top: 8%;
-  transform: rotate(-10deg);
-  animation: ani02 1s linear infinite;
-}
-@keyframes ani02 {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(-10deg);
-  }
-}
 
-#con01 .work img {
-  width: 230px;
-}
 /*con01 bottom   */
 #con01 .bottom {
   width: 100%;
   display: flex;
-  /* gap: 20rem; */
+
   justify-content: center;
   align-items: center;
   margin-top: 55px;
@@ -166,37 +193,359 @@ body {
 }
 #con01 .bottom p {
   margin-left: 3rem;
-  font-size: 2rem;
+  font-size: 1.5vw;
 }
-
+/* con02 */
+#con02 {
+  width: 100%;
+  height: 100vh;
+  padding: 2rem 6rem;
+  display: flex;
+  box-sizing: border-box;
+  gap: 2rem;
+}
+/* con02 left */
+#con02 .left {
+  width: 70%;
+  padding: 2rem;
+  box-sizing: border-box;
+}
+/* con02 aboutMe */
+#con02 .left .aboutMe {
+  width: 100%;
+  padding: 2rem;
+  box-sizing: border-box;
+  position: relative;
+}
+#con02 .left .aboutMe h2 {
+  font-family: "PyeongChangPeace-Bold";
+  font-size: 9vw;
+}
+#con02 .left .aboutMe span {
+  display: block;
+}
+/* con02 left aboutMe design */
+#con02 .left .aboutMe .design {
+  width: 450px;
+  height: 120px;
+  position: absolute;
+  right: 6%;
+  top: 60%;
+  transform: rotate(-10deg);
+}
+/* con02 left aboutMe design img */
+#con02 .left .aboutMe .design img {
+  width: 100%;
+  height: 100%;
+}
+/*con02 left text   */
+#con02 .left .text {
+  width: 85%;
+  border: 2px solid #222;
+  padding: 2rem;
+  border-radius: 30px;
+  margin-top: 1rem;
+}
+/*con02 left text  p */
+#con02 .left .text p {
+  font-size: 1.5vw;
+  letter-spacing: 3px;
+}
+#con02 .right {
+  width: 40%;
+  position: relative;
+}
+#con02 .hi {
+  position: absolute;
+  right: 20px;
+}
+#con02 .right .imgBox {
+  width: 700px;
+  top: 0px;
+}
+#con02 .right .imgBox img {
+  width: 100%;
+}
+#con02 .right .hello {
+  position: absolute;
+  left: -100px;
+  top: 500px;
+}
 @media (max-width: 1224px) {
+  /* con01 top */
+  #con01 .top {
+    padding: 2rem 3rem;
+  }
+  #con01 .title {
+    transform: translateY(30px);
+  }
   #con01 .name {
-    top: 23%;
-    left: 60%;
+    position: absolute;
+
+    top: 30%;
   }
   #con01 .name img {
     width: 40%;
   }
-  /*con01 web */
+  /*con01 work  */
+  #con01 .work {
+    position: absolute;
+    right: 2%;
+    top: -10%;
+  }
+  #con01 .work img {
+    width: 60%;
+  }
   #con01 .web {
     position: absolute;
     left: 8%;
-    top: 42%;
+    top: 70%;
   }
   #con01 .web img {
-    width: 100%;
+    width: 90%;
   }
-  /*con01 work */
+}
+@media (max-width: 950px) {
+  /* con01 top */
+  #con01 .top {
+    padding: 2rem 3rem;
+  }
+  /* con01 title */
+  #con01 .title {
+    transform: translateY(30px);
+  }
+  #con01 .name {
+    position: absolute;
+
+    top: 25%;
+  }
+  #con01 .name img {
+    width: 30%;
+  }
+  /*con01 work  */
   #con01 .work {
     position: absolute;
     right: 0%;
-    top: 8%;
+    top: -12%;
   }
   #con01 .work img {
+    width: 50%;
+  }
+  #con01 .web {
+    position: absolute;
+    left: 6%;
+    top: 65%;
+  }
+  #con01 .web img {
+    width: 80%;
+  }
+  /* con01 textBox */
+  #con01 .textBox p {
+    font-size: 2.5vw;
+  }
+  #con01 .textBox img {
+    width: 8%;
+  }
+  #con01 .bottom {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 800px) {
+  /* con01 top */
+  #con01 .top {
+    padding: 2rem 3rem;
+  }
+  /* con01 top logo */
+  #con01 .top .logo h1 {
+    font-size: 2.2vw;
+  }
+  /*con01 title  */
+  #con01 .title {
+    transform: translateY(30px);
+  }
+  /* con01 name */
+  #con01 .name {
+    position: absolute;
+
+    top: 20%;
+  }
+  #con01 .name img {
+    width: 30%;
+  }
+  /*con01 work  */
+  #con01 .work {
+    position: absolute;
+    right: -3%;
+    top: -18%;
+  }
+  #con01 .work img {
+    width: 50%;
+  }
+  /* con01 web */
+  #con01 .web {
+    position: absolute;
+    left: 4%;
+    top: 65%;
+  }
+  #con01 .web img {
     width: 70%;
+  }
+  /* con01 textBox */
+  #con01 .textBox p {
+    font-size: 2.8vw;
+  }
+  #con01 .textBox img {
+    width: 8%;
   }
   #con01 .bottom p {
     margin-left: 2rem;
     font-size: 2vw;
+  }
+}
+@media (max-width: 600px) {
+  /* con01 top */
+  #con01 .top {
+    padding: 2rem;
+  }
+  /* con01 top logo */
+  #con01 .top .logo h1 {
+    font-size: 2.2vw;
+  }
+  /*con01 title  */
+  #con01 .title {
+    transform: translateY(30px);
+  }
+  /* con01 name */
+  #con01 .name {
+    position: absolute;
+
+    top: 15%;
+  }
+  #con01 .name img {
+    width: 30%;
+  }
+  /*con01 work  */
+  #con01 .work {
+    position: absolute;
+    right: -6%;
+    top: -25%;
+  }
+  #con01 .work img {
+    width: 40%;
+  }
+  /* con01 web */
+  #con01 .web {
+    position: absolute;
+    left: 0%;
+    top: 55%;
+  }
+  #con01 .web img {
+    width: 65%;
+  }
+  /* con01 textBox */
+  #con01 .textBox p {
+    font-size: 2.8vw;
+  }
+  #con01 .textBox img {
+    width: 8%;
+  }
+  #con01 .bottom p {
+    margin-left: 2rem;
+    font-size: 2vw;
+  }
+}
+@media (max-width: 550px) {
+  /* con01 name */
+  #con01 .name {
+    position: absolute;
+
+    top: 10%;
+  }
+  #con01 .name img {
+    width: 30%;
+  }
+  /*con01 work  */
+  #con01 .work {
+    position: absolute;
+    right: -10%;
+    top: -30%;
+  }
+  #con01 .work img {
+    width: 30%;
+  }
+  /* con01 web */
+  #con01 .web {
+    position: absolute;
+    left: -4%;
+    top: 50%;
+  }
+  #con01 .web img {
+    width: 55%;
+  }
+}
+@media (max-width: 400px) {
+  /* con01 name */
+  #con01 .name {
+    position: absolute;
+
+    top: 5%;
+  }
+  #con01 .name img {
+    width: 30%;
+  }
+  /*con01 work  */
+  #con01 .work {
+    position: absolute;
+    right: -15%;
+    top: -40%;
+  }
+  #con01 .work img {
+    width: 25%;
+  }
+  /* con01 web */
+  #con01 .web {
+    position: absolute;
+    left: -8%;
+    top: 45%;
+  }
+  #con01 .web img {
+    width: 45%;
+  }
+  /* con01 bottom */
+  #con01 .bottom {
+    margin-top: 15px;
+  }
+}
+@media (max-width: 350px) {
+  /* con01 top */
+  #con01 .top {
+    padding: 2rem 0.8rem;
+  }
+  /* con01 name */
+  #con01 .name {
+    position: absolute;
+
+    top: 0%;
+  }
+  #con01 .name img {
+    width: 30%;
+  }
+  /*con01 work  */
+  #con01 .work {
+    position: absolute;
+    right: -20%;
+    top: -50%;
+  }
+  #con01 .work img {
+    width: 25%;
+  }
+  /* con01 web */
+  #con01 .web {
+    position: absolute;
+    left: -14%;
+    top: 35%;
+  }
+  #con01 .web img {
+    width: 35%;
   }
 }
