--- a/css/style.css
+++ b/css/style.css
@@ -199,14 +199,14 @@ body {
 #con02 {
   width: 100%;
   height: 100vh;
-  padding: 2rem 6rem;
+  padding: 1rem 6rem;
   display: flex;
   box-sizing: border-box;
-  gap: 2rem;
+  /* gap: 2rem; */
 }
 /* con02 left */
 #con02 .left {
-  width: 70%;
+  width: 60%;
   padding: 2rem;
   box-sizing: border-box;
 }
@@ -219,7 +219,7 @@ body {
 }
 #con02 .left .aboutMe h2 {
   font-family: "PyeongChangPeace-Bold";
-  font-size: 9vw;
+  font-size: 9.2vw;
 }
 #con02 .left .aboutMe span {
   display: block;
@@ -244,12 +244,12 @@ body {
   border: 2px solid #222;
   padding: 2rem;
   border-radius: 30px;
-  margin-top: 1rem;
 }
 /*con02 left text  p */
 #con02 .left .text p {
   font-size: 1.5vw;
   letter-spacing: 3px;
+  line-height: 1.5;
 }
 #con02 .right {
   width: 40%;
