--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,7 @@ header .bar {
   /* height: 100vh; */
   overflow: hidden;
   position: relative;
-  margin-bottom: 650px;
+  margin-bottom: 2rem;
 }
 /* con04 section */
 #con04 section {
@@ -908,6 +908,64 @@ header .bar {
   width: 100%;
   height: 100%;
 }
+/*con06 btnWrap  */
+#con06 .btnWrap {
+  width: 170px;
+  height: 170px;
+  position: absolute;
+  left: 20%;
+  top: -30%;
+  transform: translateX(-50%);
+  z-index: 20;
+  border: 2px solid #222;
+  border-radius: 50%;
+  box-sizing: border-box;
+  transition: 0.5s;
+  position: relative;
+  cursor: pointer;
+}
+
+#con06 .btnWrap img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+#con06 .btnWrap img:nth-child(2) {
+  opacity: 0;
+}
+#con06 .btnWrap::before {
+  content: "";
+  width: 0%;
+  height: 0%;
+  background: #222 url(../img/circle01.png) no-repeat center / 160px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  animation: spin03 10s infinite linear;
+  transition: 0.4s;
+}
+@keyframes spin03 {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+#con06 .btnWrap:hover {
+  border-color: transparent;
+}
+#con06 .btnWrap:hover img:nth-child(2) {
+  opacity: 1;
+}
+#con06 .btnWrap:hover::before {
+  width: 100%;
+  height: 100%;
+}
+
 /*con06 bottom   */
 #con06 .bottom {
   width: 100%;
@@ -915,7 +973,7 @@ header .bar {
 
   justify-content: center;
   align-items: center;
-  margin-top: 200px;
+  margin-top: 40px;
 }
 #con06 .bottom .line02 {
   width: 70%;
@@ -968,6 +1026,7 @@ header .bar {
   font-size: 1.7rem;
   letter-spacing: 3px;
 }
+/*con07 textBox02 txt02  */
 #con07 .textBox02 .txt02 {
   margin-top: 1rem;
   text-align: center;
@@ -999,6 +1058,7 @@ header .bar {
   right: -150px;
   top: 100px;
   transform: rotate(30deg);
+  z-index: 50;
 }
 #con07 .bg08 img {
   width: 100%;
